force-app/main/default/objects/leaseworks__Certificates__c/leaseworks__Certificates__c.object-meta.xml
<CustomObject>
    <label>Certificates</label>
    <nameField>
        <label>Certificates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certificates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>