force-app/main/default/objects/leaseworks__Certificates__c/fields/leaseworks__Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset_Name__c</fullName>
    <label>Asset Name</label>
    <referenceTo>leaseworks__Aircraft__c</referenceTo>
    <relationshipName>Certificates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>