force-app/main/default/objects/leaseworks__Certificates__c/fields/leaseworks__Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Issue_Date__c</fullName>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>