force-app/main/default/objects/leaseworks__Certificates__c/fields/leaseworks__Remark__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Remark__c</fullName>
    <label>Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>