force-app/main/default/objects/leaseworks__Certificates__c/fields/leaseworks__Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certificate of Airworthiness</fullName>
            </value>
            <value>
                <fullName>Certificate of Registration</fullName>
            </value>
            <value>
                <fullName>Noise Certificate</fullName>
            </value>
            <value>
                <fullName>Airworthiness Review Certificate</fullName>
            </value>
            <value>
                <fullName>Aircraft Radio License</fullName>
            </value>
            <value>
                <fullName>Export Certificate of Airworthiness</fullName>
            </value>
            <value>
                <fullName>EuroControl Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>