force-app/main/default/objects/leaseworks__Certificates__c/fields/leaseworks__Unlimited__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Unlimited__c</fullName>
    <formula>ISBLANK( leaseworks__Expiry_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unlimited</label>
    <type>Checkbox</type>
</CustomField>